--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t ravinder/multi-nginx ./nginx
   - docker build -t ravinder/multi-worker ./worker
   # log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --pasword-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # images push to dockerhub
   - docker push ravinder/multi-client
   - docker push ravinder/multi-server
