--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push ravinderdock/multi-server
   - docker push ravinderdock/multi-nginx
   - docker push ravinderdock/multi-worker
+
+deploy:
+ provider: elasticbeanstalk
+ region: 'us-east-2'
+ app: 'multi-docker'
+ env: 'Multidocker-env'
+ bucket_name: 'elasticbeanstalk-us-east-2-535111072532'
+ bucket_path: 'docker-multi'
+ on:
+   branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key: $AWS_SECRET_KEY
